--- a/_posts/.2016-08-26-falcon-zero.markdown
+++ b/_posts/.2016-08-26-falcon-zero.markdown
@@ -1,17 +1,17 @@
 ---
 layout: post
 title:  "Falcon-Zero: Maximum Velocity"
-date:   2016-08-26
+date:   2016-08-25
 categories: TACC assembly pacificbiosciences nsf stampede CyVerse
 ---
 
-In my previous post, I showed you how to complete an assembly of the E. coli genome in 54 minutes using Stampede at TACC and CyVerse. While this is good, it is fairly slow for a distributed program that is allowed to use up to 30 nodes. To reduce the overall [wall-clock time](https://en.wikipedia.org/wiki/Wall-clock_time) it takes for an assembly, Falcon submits every task as a batch job to a scheduler. While submitting multiple jobs to the schedulers allows for concurrent execution, wait time increases based on availability in that system. Our systems, which are available to local UT-system, national NSF, and global collaborating researchers, are often oversubscribed and subject to fairly long waiting times for execution. This renders any assumption that hundreds or thousands of job submissions can be run to accomplish a given task totally impractical. Most large systems give higher priority to multi-node jobs in contrast to the single-node jobs falcon produces.
+I [previously]({% post_url 2016-05-02-falcon-in-the-nsf-cloud %}) demonstrated how to complete an assembly of the E. coli genome in 54 minutes using Stampede at TACC and CyVerse. While convenient, this is fairly slow for the amount of provided resources compared to the input size. Out of the box, Falcon can run concurrent tasks on multiple compute nodes. However, this is done by submitting each task as a separate batch job to the system scheduler. A system scheduler is not meant to be a high-performance load balancer, but a fair way schedule variable sized workloads to run. Our systems, which are available to local UT-system, national NSF, and global collaborating researchers, are often oversubscribed and subject to fairly long waiting times. This renders any assumption that hundreds or thousands of job submissions can be run to accomplish a given task totally impractical.
 
-To get the best runtime possible while also demonstrating Falcon’s ability to distribute jobs, I ran the original E. coli assembly job at night. Most of the users on Stampede work (and submit their jobs) during the day, so the system has the shortest wait times after most of the short jobs have already completed. Even with these ideal conditions, there was still significant overhead from SLURM because a [prolog](http://slurm.schedmd.com/prolog_epilog.html) is run before each job to prepare the user environment and ensure the system is running normally before any time is charged.
+To get the best runtime possible while also demonstrating Falcon’s ability to distribute jobs, I ran the original E. coli assembly job during the night when the system load decreases. Even with these ideal conditions, there was still significant overhead from SLURM because a [prolog](http://slurm.schedmd.com/prolog_epilog.html) is run before each job to sanitize and prepare the user environment for each new task. This necessary step takes about 20 seconds, but these 20 seconds add up when the task count is in the hundreds or thousands.
 
-To reduce the run times for these tasks, I developed the [vQ](https://github.com/zyndagj/vQ), a virtual queue for multi-node jobs that will dynamically balance the execution of tasks issued with normal SLURM commands across a pre-allocated set of computing nodes on a shared resource. vQ is a drop-in solution that overloads all SLURM queue commands, without requiring any changes to the Falcon source code. This removes any wait time between tasks, all while handling I/O redirection and return codes.
+To reduce the overhead and runtimes for these tasks, I developed the [vQ](https://github.com/zyndagj/vQ), a virtual queue for multi-node jobs that will dynamically balance the execution of tasks issued with normal SLURM commands across a pre-allocated set of computing nodes on a shared resource. vQ is a drop-in solution that overloads all SLURM queue commands, without requiring any changes to the Falcon source code. This removes any wait time between tasks, all while handling I/O redirection and return codes.
 
-Using the same job config as before
+Using the same job config as [before]({% post_url 2016-05-02-falcon-in-the-nsf-cloud %})
 
 ```shell
 [General]
@@ -49,7 +49,7 @@ cns_concurrent_jobs = %(maxJobs)s
 overlap_filtering_setting = --max_diff 100 --max_cov 100 --min_cov 20 --bestn 10 --n_core 16
 ```
 
-I added the vQ.py program before the fc_run command in my SLURM batch script
+I added the `vQ.py` program before the `fc_run` command in my SLURM batch script
 
 ```shell
 #!/bin/bash
@@ -61,27 +61,33 @@ I added the vQ.py program before the fc_run command in my SLURM batch script
 #SBATCH -N 5
 #SBATCH -n 5
 #SBATCH -A TACC_ALLOCATION
+
 module use /work/03076/gzynda/public/apps/modulefiles
 module load python/2.7.9 hdf5 falcon vq
 
-time vQ.py fc_run job_slow.cfg
+time vQ.py fc_run job.cfg
 ```
 
-Falcon divides the input reads into 5 blocks that are 200 megabases each, so using more than 5 nodes will not improve the runtime. This jobs completes in 24 minutes. That means more than half of the 54 minutes was spent as queue overhead. And while vQ allows falcon to run twice as fast, we should be able to craft more efficient jobs by altering the configuration.
+Note that I am running this job on 5 nodes instead of the previous limit of 30 because the 200 megabase input partitions ran on 5 nodes at max. With this single change, the job completed in 24 minutes. Over half of the previous 54 minutes was spent as queue overhead. And while vQ allows falcon to run twice as fast, we should be able to craft more efficient jobs by optimizing the configuration.
 
-Use smaller blocks to oversaturate CPU workload
+Use smaller blocks and multiple tasks per node to saturate CPU
 Choose an optimal kmer size and frequency
-Use less data - only the largest reads are ever used for correction and assembly
+Use less of the data
 
-The block size is very important. Many parameters and requirements depend on the block size, so this should be chosen with some care. For large genomes, I recommend a large block size. This will yield fewer tasks, but also fewer files that could affect our lustre filesystem on stampede. I recently helped with a large assembly that created more than 200,000 daligner tasks for the pairwise comparisons. Increasing the block size significantly reduced the stress on the filesystem.
+## Choosing a block size
+The block size is the first parameter that needs to be chosen because it not only affects the structure of the computation, but also many of the parameters. The block size literally defines the partition size of the input reads. First, the number of blocks affects the number of tasks and files created for the assembly. For large assemblies, the block size should be made fairly large (> 200 mb) since huge numbers of files causes slowdowns and eventually crashes in lustre metadata servers. However, this may require several rounds of tuning on the other parameters to ensure that tasks do not fail from memory overallocation.
 
-For small genomes, like E. coli, I suggest you choose a block size that is about 10 times the size of the genome or smaller. This is because the k-mer filtering steps are on a block basis, so even if you choose at large values of k, the kmer will be seen the number of times the genome can be fit in the block size. To improve the runtime of the E. coli example, I suggest a block size of 50 megabases, and 13 base pair (bp) k-mers. A 13 bp kmer is expected to be seen
+For small genomes, like E. coli, I suggest a block size that is about 10 times the size of the genome or smaller. This is because the k-mer filtering steps are on a block basis, so even if you choose large k values, the kmer will be seen the number of times the genome can be fit in the block size.
 
-![0.069](http://latex.codecogs.com/gif.latex?%5Cfrac%7B4.6*10%5E6-%2813-1%29%7D%7B4%5E%7B13%7D%7D%20%3D%200.069%20%5Ctext%7B%20times%7D)
+## Kmer size and frequency
+To improve the runtime of the E. coli example, used a block size of 50 megabases, and 13 base pair (bp) k-mers. A 13 bp kmer is expected to be seen
 
-in the genome. We round up to integers when counting kmers, so we should only expect to see a kmer once. Because the 4.6 megabase genome fits in the 50 megabase block almost 11 times, you need your `-t` parameter to be at least 11. I found that multiplying the minimum `-t` by ~1.5 yielded nice results. Note that `-t` is not a kmer cutoff, but a read cutoff. Once DALIGNER finds `-t` reads with a specific kmer in a block, it will discard the rest. This is irrespective of length and alignment quality, making the final assembly completely dependent on input order at small values of `-t`.
+$$\frac{4.6*10^6-(13-1)}{4^{13}} = 0.069 \text{ times}$$
 
-Because we know that reads are indiscriminately filtered by DALIGNER, we want to make sure that the best (longest) reads are used first. Some steps like error correction make sure to always use the longest reads, but DALIGNER, the first step, does not. The original configuration used reads at least 12,000 base pairs long as the primary reas. This equated to 133x coverage with their sample dataset. Due to cost, this is an unreasonable coverage expectation for most eucharyotic assemblies. I found decent results in the 20x range and was able to reach a single-molecule assembly with primary reads at least 23,000 base pairs long, yielding 27x coverage. While this gave me a theoretical coverage of 27x, I had to drop the overlap minimum coverage to 2 for the final assembly as shown in my job script below.
+in the genome. Because this number is less than 1, we know that k is large enough to ensure the uniqueness of a kmer apart from sequence duplication. Normally you would then choose a conservative value like 3, but this would be too low for our case. The `-t` parameter is a counts the number of appearances per block. The 4.6 megabase genome fits in the 50 megabase block almost 11 times, so `-t` needs to be at least 11. I found multiplying the minimum `-t` by 1.5 yielded decent results and did not allow for overalignment. Remember from the documentation that this is a read cutoff, so DALIGNER will find `-t` reads with a specific kmer in a block and then discard the rest. This is irrespective of length and alignment quality, making the final assembly completely dependent on input order at small values of `-t`.
+
+## Read filtering
+Since reads are indiscriminately filtered by DALIGNER, we want to make sure that the best (longest) reads are used first. Some steps like error correction make sure to always use the longest reads, but DALIGNER, the first step, does not. The original configuration used reads at least 12,000 base pairs long as the primary reads. This equated to 133x coverage with their sample dataset. Due to cost, this is an unreasonable coverage expectation for most eukaryotic assemblies. I found decent results in the 20x range and was able to reach a single-molecule assembly with primary reads at least 23,000 base pairs long, yielding 27x coverage. While this gave me a theoretical coverage of 27x, I had to drop the overlap minimum coverage to 2 for the final assembly as shown in my job script below.
 
 ```shell
 [General]
@@ -135,3 +141,10 @@ module load python/2.7.9 hdf5 falcon vq
 export VQ_PPN=2
 time vQ.py fc_run job.cfg
 ```
+
+Notice that we’re launching two tasks at a time on each of our 5 requested nodes.
+
+![c_falcon_banner](https://cloud.githubusercontent.com/assets/6790115/18040064/0fe66e0e-6d6f-11e6-98db-9142c3632fae.jpg)
+
+## Future
+Second to actually running Falcon, I find that users have significant trouble crafting ideal job configurations. To improve this process and give first-time users a point to start from, I plan on developing and releasing a tool that will generate configuration files from an input dataset and a target genome size. I don’t expect this to be optimal since we’re dealing with a process dependent on input order, but it should be a decent first-pass with room for improvement by relaxing some values.
